# osal

./: CMakeLists.txt  LICENSE  README.md
include/osal/: os.h
src/: os.cpp
test/: CMakeLists.txt  test_osal.cpp
